--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-pandas==1.0.5
 requests==2.24.0
+tabulate==0.8.7
+pandas==1.0.5
+Flask==1.1.2
+gunicorn==20.0.4
 selenium==3.141.0
+gspread==3.7.0
 webdriver_manager==3.4.2
 beautifulsoup4==4.9.3
