--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-requests==2.24.0
-tabulate==0.8.7
 pandas==1.0.5
-Flask==1.1.2
 gunicorn==20.0.4
-selenium==3.141.0
+requests==2.24.0
+oauth2client==4.1.3
+Flask==1.1.2
 gspread==3.7.0
-webdriver_manager==3.4.2
+tabulate==0.8.7
 beautifulsoup4==4.9.3
