--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-pandas==1.0.5
-gunicorn==20.0.4
 requests==2.24.0
-oauth2client==4.1.3
+tabulate==0.8.7
+gunicorn==20.0.4
 Flask==1.1.2
 gspread==3.7.0
-tabulate==0.8.7
+pandas==1.0.5
+oauth2client==4.1.3
 beautifulsoup4==4.9.3
+orjson==3.5.3
